--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,18 @@ beautifulsoup4==4.12.3
 colorama==0.4.6
 decorator==5.1.1
 Django==5.0.6
+django-adminlte2==0.4.3
 django-bootstrap-breadcrumbs==0.9.2
 django-bootstrap4==24.3
 django-crispy-forms==2.1
+django-grappelli==4.0.1
+django-jet==1.0.8
 executing==2.0.1
 ipython==8.24.0
 jedi==0.19.1
 matplotlib-inline==0.1.7
 parso==0.8.4
+pillow==10.3.0
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
 Pygments==2.18.0
