--- a/requirements.txt
+++ b/requirements.txt
@@ -3,26 +3,35 @@ asttokens==2.4.1
 beautifulsoup4==4.12.3
 colorama==0.4.6
 decorator==5.1.1
+dj-static==0.0.6
 Django==5.0.6
+django-admin-interface==0.28.6
 django-adminlte2==0.4.3
 django-bootstrap-breadcrumbs==0.9.2
 django-bootstrap4==24.3
+django-colorfield==0.11.0
 django-crispy-forms==2.1
 django-grappelli==4.0.1
 django-jet==1.0.8
+djangorestframework==3.15.1
 executing==2.0.1
+gunicorn==22.0.0
 ipython==8.24.0
 jedi==0.19.1
 matplotlib-inline==0.1.7
+packaging==24.0
 parso==0.8.4
 pillow==10.3.0
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
 Pygments==2.18.0
+python-slugify==8.0.4
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.0
 stack-data==0.6.3
+static3==0.7.0
+text-unidecode==1.3
 traitlets==5.14.3
 tzdata==2024.1
 wcwidth==0.2.13
